tests/positive/address_of_let.ax
module address_of_let;

fn read(value: *const i32) -> i32 {
    return *value;
}

fn main() -> i32 {
    let value: i32 = 42;
    return read(&value) - 42;
}
