tests/negative/ptr_addr_non_pointer.ax
module ptr_addr_non_pointer;

fn main() -> i32 {
    let value: i32 = 1;
    let addr: usize = ptr_addr(value);
    return cast(i32, addr);
}
